[package]
name = "testconnection2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version = "2.5.0", features = ["tokio-sync"]}
tokio = { version = "1.28.1" }
warp = "0.3.5"
serde = {version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
futures = "0.3"
env_logger = "0.9"
log = "0.4"